--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dependencies:
   geolocator: ^9.0.2
   http: ^0.13.5
   percent_indicator: ^4.2.2
-
+  flutter_polyline_points: ^1.0.0
+  location: ^4.4.0
+  cloud_firestore: ^4.0.3
 
   
 
@@ -74,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/mapmarker_icons/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
