--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -48,6 +49,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   location: ^4.4.0
   cloud_firestore: ^4.0.3
+  flutter_animarker: ^3.2.0
 
   
 
